--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,9 +6,9 @@
         <p class="text-wrap text-center">
           Hello im
           <a
-            href="https://github.com/motebaya"
+            href="https://www.instagram.com/_falfal12?igsh=ZDU2cTh4NjZqcGJq"
             class="text-decoration-underline text-secondary"
-            >Motebaya</a
+            >falfal</a
           >
           the person who develop this project.
         </p>
@@ -32,3 +32,4 @@
   </div>
   <%- include("footer", {Utils: undefined}) %>
 </div>
+
