--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
 <footer class="footer mt-auto mb-2">
   <div class="container-fluid">
     <div class="text-center">
-      <p>&copy; Copyright 2023 - Made With &#9749; by <a href="https://github.com/motebaya">Motebaya</a> | <a href="/api/docs">Api's</a> | <a href="/about">About</a></p>
+      <p>&copy; Copyright 2025 - Made With &#9749; by <a href="https://www.instagram.com/_falfal12?igsh=ZDU2cTh4NjZqcGJq">falfal12</a> | <a href="/api/docs">Api's</a> | <a href="/about">About</a></p>
     </div>
   </div>
 </footer>
@@ -13,4 +13,5 @@
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/tiktokjs-func-3.2.1.min.js"></script>
 </body>
+
 </html>
