--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,9 +4,9 @@
       <div class="card-body">
         <form method="POST">
           <label for="video_url" class="float-start form-label text-secondary"
-            >Not all server have same features/result, visit:
+            >my visit:
             <a
-              href="https://github.com/motebaya/tiktok-js?tab=readme-ov-file#Features-list"
+              href="https://www.instagram.com/_falfal12?igsh=ZDU2cTh4NjZqcGJq"
               target="_blank"
               rel="noopener noreferrer"
               >Features list</a
@@ -80,3 +80,4 @@
     <div class="toast-body">Hello, buddy :V</div>
   </div>
 </div>
+
