--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
     <nav class="navbar">
       <div class="container col-md-12">
         <a class="navbar-brand" href="/">
-          <i class="bi-tiktok me-1">TikTok dl</i>
+          <i class="bi-tiktok me-1">TikTok downloader</i>
         </a>
 
         <a href="#" id="themes" class="navbar-brand">
@@ -26,3 +26,4 @@
       </div>
     </nav>
   </header>
+
